--- a/views/workspace_edit.erb
+++ b/views/workspace_edit.erb
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title><%= @workspace.name %>を編集する - Keypod</title>
+	<link rel="shortcut icon" href="/assets/images/favicon.ico">
 </head>
 <body>
 
