--- a/public/assets/css/workspace.css
+++ b/public/assets/css/workspace.css
@@ -268,11 +268,62 @@ small {
 }
 
 .modal__content {
-  background: #fff;
+  background: #faf6f1;
   left: 50%;
   padding: 40px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
   width: 60%;
+  height: 60%;
+  border-radius: 8px;
+  overflow: scroll;
+}
+
+.modal__content div {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 16px;
+}
+
+.modal__content h1,
+.modal__content h2 {
+  color: #333230;
+}
+
+.modal__content h2 {
+  font-size: 24px;
+}
+
+.modal__content div form {
+  width: calc(50% - 48px);
+}
+
+.copy_alert {
+  display: none;
+}
+
+.share {
+  cursor: pointer;
+}
+
+#js-copytext {
+  display: none;
+}
+
+.alert {
+  display: none;
+  position: absolute;
+  width: 240px;
+  top: 24px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  z-index: 100;
+  background-color: #f0810f;
+  color: #fff7ee;
+  margin-bottom: 15px;
+  text-align: center;
+  border-radius: 8px;
 }
