--- a/views/index.erb
+++ b/views/index.erb
@@ -44,7 +44,7 @@
 				自分の好きなタイミングでのクリップの再生、ドラムラックの演奏、メロディーの作成といった操作などを行うことができるため、DJや劇の効果音再生などに用いられています。<br>
 				しかしLaunchpadは値段が高く、またプロ用の機材やソフトウェアの導入が必要不可欠です。<br>
 				だから身近にあるキーボードのキーをLaunchpadのキーに見立てて、Web上でいつでもどこでも演奏できるようなアプリを開発しました。<br>
-				それが、今あなたのみているサイト「Keypod」なのです。
+				それが、今あなたのみているサイト「Keypod」です。
 			</p>
 		</div>
 		<div class="getstarted">
