--- a/public/assets/css/workspace.css
+++ b/public/assets/css/workspace.css
@@ -52,7 +52,7 @@ header div i {
   position: absolute;
   z-index: 10;
   width: 100%;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 72px);
   justify-content: center;
   background: #011a27;
   display: flex;
@@ -270,12 +270,12 @@ small {
 .modal__content {
   background: #063852;
   left: 50%;
-  padding: 40px;
+  padding: 32px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 60%;
-  height: 60%;
+  width: 75%;
+  height: 75%;
   border-radius: 8px;
   overflow: scroll;
 }
@@ -283,7 +283,19 @@ small {
 .modal__content div {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 8px;
+}
+
+.modal__content div:nth-child(1) {
   margin-bottom: 16px;
+  justify-content: space-between;
+}
+
+.modal__content div:nth-child(1) a {
+  margin-right: 16px;
+  font-size: 32px;
+  line-height: 32px;
+  color: #fff7ee;
 }
 
 .modal__content h1,
@@ -291,12 +303,74 @@ small {
   color: #fff7ee;
 }
 
+.modal__content h1 {
+  padding-left: 16px;
+}
+
 .modal__content h2 {
   font-size: 24px;
 }
 
 .modal__content div form {
-  width: calc(50% - 48px);
+  width: calc(50% - 64px);
+  min-height: 124px;
+  padding: 12px 24px;
+  border: solid 2px #fff;
+  border-radius: 8px;
+}
+
+.modal__content input {
+  margin-bottom: 8px;
+}
+
+.modal__content input[type="submit"],
+.file_label {
+  margin: 4px 0;
+  outline: 0;
+  font-size: 16px;
+  border: none;
+  display: inline-block;
+  padding: 4px 20px;
+  text-decoration: none;
+  background: #f0810f;
+  color: #fff7ee;
+  border-bottom: solid 4px #c76a0e;
+  border-radius: 3px;
+}
+
+.modal__content br {
+  line-height: 8px;
+}
+
+.modal__content input[type="file"] {
+  display: none;
+}
+
+.modal__content input[type="submit"]:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  border-bottom: none;
+  margin-top: 4px;
+}
+
+.file_label:active {
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);
+  border-bottom: none;
+  margin-bottom: 8px;
+}
+
+.modal__content input[type="text"] {
+  width: 100%;
+  margin-top: 8px;
+  padding: 0.5em 0 4px;
+  padding-left: 0;
+  background: none;
+  color: #fff7ee;
+  font-size: 1.2em;
+  font-weight: 400;
+  border: none;
+  border-bottom: 1px solid #999;
 }
 
 .copy_alert {
@@ -326,4 +400,19 @@ small {
   margin-bottom: 15px;
   text-align: center;
   border-radius: 8px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 64px;
+  padding-top: 8px;
+  background: #01111a;
+  text-align: center;
+  color: #fff7ee;
+}
+
+footer small {
+  font-size: 12px;
 }
