add google analytics

--- a/views/mobile.erb
+++ b/views/mobile.erb
@@ -7,5 +7,15 @@
 </head>
 <body>
 	<p>このサイトはPC用です。</p>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84261059-12"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-84261059-12');
+	</script>
 </body>
 </html>
