--- a/views/login.erb
+++ b/views/login.erb
@@ -43,5 +43,14 @@
 		</form>
 	</div>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84261059-12"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-84261059-12');
+	</script>
 </body>
 </html>
