--- a/views/workspace.erb
+++ b/views/workspace.erb
@@ -546,5 +546,15 @@
 		<footer>
 			<small>© 2020 Keypod by Kazuki Isogai.</small>
 		</footer>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-84261059-12"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-84261059-12');
+		</script>
   </body>
 </html>
